<resources>
    <string name="app_name">Lets-Green</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="changePassword">CAMBIALA QUI</string>
    <string name="register">registrati</string>
    <string name="loginbottom">Accedi</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_card_pollution">I MIEI PERCORSI</string>
    <string name="title_card_plant">LA MIA SERRA</string>
    <string name="description_card_plant">descrizione di cosa fa</string>
    <string name="description_card_pollution">descrizione di cosa fa</string>
    <string name="name_icon_catalog">catalogo</string>
    <string name="name_icon_home">home</string>
    <string name="name_icon_actions">attività</string>
    <string name="name_icon_settings">impostazioni</string>
    <string name="profile">profilo</string>
    <string name="title">Lets-green</string>
    <string name="password">passowrd</string>
    <string name="repeatPassword">inserisci nuovamente la password</string>
    <string name="email">email</string>
    <string name="textViewForgotPassword">Password dimenticata?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>