<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/name_icon_home"/>
    <item
        android:id="@+id/attività"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/name_icon_actions"/>
    <item
        android:id="@+id/catalogo"
        android:enabled="true"
        android:icon="@drawable/fiore"
        android:title="@string/name_icon_catalog"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/name_icon_settings"/>
</menu>